# TaxRAG

./: .gitignore  pyproject.toml  requirements.txt
src/: main.py  vector.py
