[project]
name = "taxrag"
version = "0.1.0"
description = "Python AI Tax Assistant"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-ollama>=0.3.1",
    "langchain-text-splitters>=0.3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
